tests/NormalTests/paczka1/small_fuzzy/55743305.err
Error in line 10: S76 S76 72,4
Error in line 6: iiEMU S187 87,5
Error in line 11: S76 A608 75,6
